# py_search_helper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/ai_context/guidelines/: Python Best Practices and Guidelines.md  Python Project Guide.md  The Definitive Python Concurrency Guide.md  UV_Tool_Guide.md
docs/ai_context/libs/: DDGS.md  FastMCP.md  py-web-text-extractor.md
docs/ai_context/skills/: PytestSkill.md  PythonDocumentationSkill.md  READMEGenerationSkill.md
docs/architecture/: ARCHITECTURE.md
docs/development/: CLI.md  DEVELOPMENT.md  PROVIDERS.md
docs/mcp/: MCP_SERVER.md
examples/: basic_usage.py  site_filtering.py
src/py_search_helper/: __init__.py  _bootstrap.py  cli.py  exceptions.py  types.py
src/py_search_helper/api/: __init__.py  engines.py  open.py  search.py
src/py_search_helper/extractors/: __init__.py  content.py
src/py_search_helper/mcp/: __init__.py  server.py
src/py_search_helper/models/: __init__.py  engine_info.py  search_result.py
src/py_search_helper/providers/: __init__.py  base.py  ddgs_provider.py  pyside_provider.py  wikipedia_provider.py
src/py_search_helper/registry/: __init__.py  engines.py
tests/: test_cli.py
tests/test_api/: test_engines.py  test_open.py  test_search.py
tests/test_extractors/: test_content.py
tests/test_mcp/: test_server.py
tests/test_providers/: test_ddgs_provider.py  test_pyside_provider.py  test_wikipedia_provider.py
tests/test_registry/: test_engines.py
